--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,3 +1,5 @@
+@import '../../scss/abstracts/index';
+
 .root {
   border: none;
   padding: 12px;
@@ -8,11 +10,21 @@
 }
 
 .primary {
-  background-color: rgb(236, 91, 1);
+  background-color: rgb(255, 210, 93);
 }
 
 .secondary {
   background-color: rgba(142, 110, 91, 0.925);
   border: 1px solid grey;
   border-radius: 8px;
+}
+
+.tab {
+  @include border(1px, solid, $ui-color-btn-default);
+  cursor: pointer;
+
+  &:hover {
+    background-color: $ui-color-btn-default;
+    transition: all 0.6s;
+  }
 }
