--- a/src/components/Layout/styles.module.scss
+++ b/src/components/Layout/styles.module.scss
@@ -1,29 +1,23 @@
 .root {
-  height: 100%;
+  min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
+  grid-template-areas:
+    'header header header'
+    '. content .'
+    'footer footer footer';
 }
 
 .header {
-  position: sticky;
-  top: 0;
+  grid-area: header;
 }
 
 .content {
-  width: 500px;
-  margin: 10px auto;
+  grid-area: content;
 }
 
 .footer {
-  display: flex;
-  width: 100%;
-  height: 32px;
-  align-items: center;
-  justify-content: center;
-
-  background-color: black;
-
-  color: white;
+  grid-area: footer;
 }
 
 .link {
