--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -50,3 +50,13 @@
     color: white;
   }
 }
+
+.switcher {
+  background-color: transparent;
+  border: none;
+  color: white;
+
+  &:hover {
+    opacity: 0.5;
+  }
+}
