--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -30,6 +30,12 @@
   border: 1px solid rgb(62, 62, 62);
 }
 
+.additional {
+  color: white;
+  border: 0;
+  background: none;
+}
+
 .default {
   &.primary {
     background-color: rgb(230, 69, 11);
