--- a/src/components/Layout/styles.module.scss
+++ b/src/components/Layout/styles.module.scss
@@ -14,28 +14,16 @@
   margin: 10px auto;
 }
 
-.footer {
-  display: flex;
-  width: 100%;
-  height: 32px;
-  align-items: center;
-  justify-content: center;
+// .link {
+//   &:not(:last-child) {
+//     margin-right: 10px;
+//   }
 
-  background-color: black;
+//   color: white;
+//   text-decoration: none;
+//   transition: opacity 0.2s;
 
-  color: white;
-}
-
-.link {
-  &:not(:last-child) {
-    margin-right: 10px;
-  }
-
-  color: white;
-  text-decoration: none;
-  transition: opacity 0.2s;
-
-  &:hover {
-    opacity: 0.8;
-  }
-}
+//   &:hover {
+//     opacity: 0.8;
+//   }
+// }
