--- a/src/components/Restaurants/styles.module.scss
+++ b/src/components/Restaurants/styles.module.scss
@@ -7,6 +7,8 @@
   margin-bottom: 10px;
   width: 100%;
   padding: 5px;
+  opacity: 0;
+  animation: drop 1.5s forwards;
 }
 
 .filters {
@@ -15,4 +17,14 @@
 
 .tab:not(:last-child) {
   margin-right: 5px;
+}
+
+
+@keyframes drop {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
