--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -50,3 +50,13 @@
     color: white;
   }
 }
+
+.link {
+  background: none!important;
+  border: none;
+  padding: 0!important;
+
+  color: white;
+  text-decoration: underline;
+  cursor: pointer;
+}
