--- a/src/components/Dish/styles.module.scss
+++ b/src/components/Dish/styles.module.scss
@@ -1,8 +1,19 @@
 .root {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   padding: 10px 20px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
+
+.ingredients {
+  padding-top: 5px;
+  display: inline-block;
+  margin-left: auto;
 }
 
 .decrementAction {
