--- a/src/components/Review/styles.module.scss
+++ b/src/components/Review/styles.module.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   padding: 10px 20px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .header {
