--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -24,6 +24,11 @@
     text-align: justify;
   }
 
+  .nav {
+    display: flex;
+    gap: 10px;
+  }
+
   .link {
     text-decoration: none;
     cursor: pointer;
