--- a/src/components/Dish/styles.module.scss
+++ b/src/components/Dish/styles.module.scss
@@ -3,6 +3,7 @@
   align-items: center;
   padding: 10px 20px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  flex-wrap: wrap;
 }
 
 .decrementAction {
@@ -23,4 +24,15 @@
 
 .sum {
   margin-right: 10px;
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
+
+.ingrad {
+  margin-left: 1rem;
+  font-size: smaller;
+  font-style: italic;
 }
