--- a/src/components/Review/styles.module.scss
+++ b/src/components/Review/styles.module.scss
@@ -1,7 +1,7 @@
 .root {
   display: flex;
   flex-direction: column;
-  padding: 10px 20px;
+  padding: 0.5rem 1rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
